# engine

./: .clang-format  CMakeLists.txt  README.md  conan.cmake  conanfile.py
src/: DeviceContext.cpp  DeviceContext.h  Engine.cpp  Engine.h  Engine.md  GraphicsPipeline.cpp  GraphicsPipeline.h  ImageData.h  RenderContext.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  Swapchain.cpp  Swapchain.h  VertexData.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h  main.cpp
src/materials/: Material.h  PhongMaterial.cpp  PhongMaterial.h
src/objects/: MeshObject.cpp  MeshObject.h  Object.h
